feat(workouts): Initial setup of workouts API
