# api/models/lift.js
@@ -1,0 +1,25 @@
+const mongoose = require('mongoose');
+const validator = require('validator');
+const setSchema = require('./set');
+
+
+let liftSchema = new mongoose.Schema({
+    liftName: {
+        type: String,
+        required: true,
+        lowercase: true,
+        validate: (value) => {
+            return (validator.isLength(value, {min: 2, max: 50}))
+        }
+    },
+    numSets: {
+        type: Number,
+        min: [1, 'too few'],
+        max: 100
+    },
+    sets: {
+        type: [setSchema]
+    }
+});
+
+module.exports = liftSchema;
